<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_old_file_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_file_path"
        android:textColor="@color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px80">

        <Button
            android:id="@+id/btn_old_file_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/px10"
            android:paddingRight="@dimen/px10"
            android:text="@string/choose"/>

        <EditText
            android:id="@+id/et_old_file_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/btn_old_file_path"
            android:lines="1"
            tools:text="/storage/emulated/0/stringsold.xml"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_new_file_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px40"
        android:text="@string/new_file_path"
        android:textColor="@color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px80">

        <Button
            android:id="@+id/btn_new_file_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/px10"
            android:paddingRight="@dimen/px10"
            android:text="@string/choose"/>

        <EditText
            android:id="@+id/et_new_file_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/btn_new_file_path"
            android:lines="1"
            tools:text="/storage/emulated/0/stringsnew.xml"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_start_diff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px20"
        android:text="@string/start_diff"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@color/black"
        tools:text="@string/diff_result_success"/>
</LinearLayout>
